# pydiggs

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  definition_id_set.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml  python-package.yml
assets/javascripts/: extra.js
assets/stylesheets/: extra.css
authors/: index.html
contributing/: index.html
docs/: Makefile  authors.md  authors.rst  conf.py  contributing.md  contributing.rst  history.md  history.rst  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
history/: index.html
installation/: index.html
pydiggs/: __init__.py  cli.py  pydiggs.py
pydiggs/dictionaries/: DIGGSTestPropertyDefinitions.xml  properties.xml
pydiggs/diggs-schema-2.5.a/: Geotechnical.xsd  Kernel.xsd
pydiggs/diggs-schema-2.5.a/witsml/1.3.1.1/: typ_dataTypes.xsd  typ_measureType.xsd  typ_quantityClass.xsd
pydiggs/schemas/diggs-schema-2.5.a/: Example_2-DIGGS.XML  glrProfile_diggs.xsd  glrovProfile_diggs.xsd  gml3.3Profile_diggs.xsd  xlinks.xsd
pydiggs/schemas/diggs-schema-2.5.a/witsml/1.3.1.1/: typ_baseType.xsd  typ_catalog.xsd
pydiggs/schemas/diggs-schema-2.6/: README.md  index.html
search/: search_index.json
tests/: __init__.py  test_pydiggs.py
tests/test files/: Schema Error 2.xml  Syntax Error 1.xml
tests/test_files/: AtterbergExample.xml  Dictionary_Check_MWD_1.xml  Schema_Error_1.xml  test_schematron.sch
tests/test_files/2.5.a/: No_Error-2_5_a.xml  Schema_Error_1-2_5_a.xml  Schematron_Error_1-2_5_a.xml
tests/test_files/2.6/: No_Error_2_6.xml  Schema_Error_1-2_6.xml  Schematron_Error_1-2_6.xml
tests/test_schematron_schema/: test_schematron_1.sch  test_schematron_2.sch
usage/: index.html
