[tool.poetry]
name = "pydiggs"
version = "0.1.4"
description = "A Python package for Data Interchange for Geotechnical and Geoenvironmental Specialists (DIGGS)."
authors = ["xin.peng <xin_peng@outlook.com>"]
license = "GPL-3.0"
readme = "README.rst"
packages = [{include = "pydiggs"}]

[tool.poetry.scripts]
pydiggs = "pydiggs.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lxml = "^5.3.0"
rich = "^13.9.4"
myst-parser = "^4.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.10"
pylint = "^3.3.3"
virtualenv = "^20.29.1"
mypy = "^1.14.1"
pre-commit = "^4.0.1"



[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
